--- a/test.html
+++ b/test.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home</title>
-    <link rel="stylesheet" href="css/about-us.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!--<script src="javascript/about-us.js" defer></script>-->
+	<title>Test</title>
 </head>
 
 <body>
