--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Hover over the square to change it's color.</p>
         <h3>Animation</h3>
         <div id="b"></div>
-        <p>This square shows off CSS animation, by moving and changing color on it's own.</p>
+        <p>This square shows off CSS animation by changing color on it's own.</p>
         <h3>Links</h3>
         <p>There are a few links on the page, 
         <br>including <a href="https://youtu.be/ucCzsrNjX-I?si=XumvW1sCZyUWVqfq" class="link">here,</a>
